--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Expert IT enterprise and application consulting services to streamline operations, drive innovation, and accelerate business growth. Partner with MagmaTek.io for tailored technology solutions.">
+    <meta name="keywords" content="MagMatek.io, Magmatek.com, IT consulting, enterprise IT solutions, application consulting, software development, digital transformation, system integration, cloud consulting" />
+    <meta name="author" content="MagMatek.io, Magmatek.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <title>MegmaTek LLC</title>
+    <meta name="robots" content="index, follow" />
+    <title>IT Enterprise & Application Consulting | MagmaTek.io MegmaTek LLC</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
